# ocaml-cordova-plugin-social-sharing

./: cordova-plugin-social-sharing.opam  cordova_social_sharing.mli  dune-project
.github/workflows/: main.yml
opam/: opam
src/: cordova_social_sharing.mli  dune
